Minor openapi.yaml spec improvements and associated cleanup
